--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -11,7 +11,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:textColor="#000"
+        android:textSize="14sp"
         android:layout_marginTop="80dp"/>
+
+    <com.daimajia.numberprogressbar.NumberProgressBar
+        android:id="@+id/ProgressBar"
+        android:layout_below="@+id/tv_msg"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="30dp"
+        app:progress_current="0"
+        android:visibility="gone"
+        style="@style/NumberProgressBar_Default"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btn_up"
@@ -36,15 +50,27 @@
             android:textColor="#666666"
             android:text="安装路径:"/>
 
-        <TextView
-            android:id="@+id/tv_source"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:textSize="14sp"
-            android:textColor="#666666"
-            android:autoLink="all"
-            android:text="USB"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_source"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:textSize="14sp"
+                android:textColor="#666666"
+                android:autoLink="all"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#000"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
